remove const in ApplicationFasede
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7914 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/Preview2.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/Preview2.mxml
@@ -11,6 +11,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.common.controller.Notifications;
 			import net.vdombox.ide.modules.preview.ApplicationFacade;
 
 			public static const MODULE_ID : String = "net.vdombox.ide.modules.Preview";
@@ -64,7 +65,7 @@
 
 			override public function getToolset() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_TOOLSET );
+				facade.sendNotification( Notifications.CREATE_TOOLSET );
 			}
 
 			override public function getSettingsScreen() : void
