--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/ResourceBrowser.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/ResourceBrowser.mxml
@@ -15,6 +15,7 @@
 		<![CDATA[
 			import mx.skins.spark.ButtonSkin;
 			
+			import net.vdombox.ide.common.controller.Notifications;
 			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.resourceBrowser.ApplicationFacade;
 			
@@ -72,23 +73,23 @@
 			
 			override public function getToolset() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_TOOLSET );
+				facade.sendNotification( Notifications.CREATE_TOOLSET );
 			}
 			
 			override public function getSettingsScreen() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_SETTINGS_SCREEN );
+				facade.sendNotification( Notifications.CREATE_SETTINGS_SCREEN );
 			}
 			
 			override public function getBody() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_BODY );
-				facade.sendNotification( ApplicationFacade.MODULE_SELECTED);
+				facade.sendNotification( Notifications.CREATE_BODY );
+				facade.sendNotification( Notifications.MODULE_SELECTED);
 			}
 			
 			override public function deSelect():void
 			{
-				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
+				facade.sendNotification(Notifications.MODULE_DESELECTED);
 			}
 			override public function initializeSettings() : void
 			{
