--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
@@ -11,8 +11,10 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.common.controller.Notifications;
 			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.scripts.ApplicationFacade;
+			import net.vdombox.ide.common.controller.Notifications;
 
 			public static const MODULE_ID : String = "net.vdombox.ide.modules.Scripts";
 
@@ -65,23 +67,23 @@
 
 			override public function getToolset() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_TOOLSET );
+				facade.sendNotification( Notifications.CREATE_TOOLSET );
 			}
 
 			override public function getSettingsScreen() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_SETTINGS_SCREEN );
+				facade.sendNotification( Notifications.CREATE_SETTINGS_SCREEN );
 			}
 
 			override public function getBody() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_BODY );
-				facade.sendNotification( ApplicationFacade.MODULE_SELECTED)
+				facade.sendNotification( Notifications.CREATE_BODY );
+				facade.sendNotification( Notifications.MODULE_SELECTED)
 			}
 			
 			override public function deSelect():void
 			{
-				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
+				facade.sendNotification(Notifications.MODULE_DESELECTED);
 			}
 
 			override public function initializeSettings() : void
