--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -22,6 +22,7 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.common.controller.Notifications;
 			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.tree.ApplicationFacade;
 
@@ -76,24 +77,24 @@
 
 			override public function getToolset() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_TOOLSET );
+				facade.sendNotification( Notifications.CREATE_TOOLSET );
 			}
 
 			override public function getSettingsScreen() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_SETTINGS_SCREEN );
+				facade.sendNotification( Notifications.CREATE_SETTINGS_SCREEN );
 			}
 
 			
 			override public function getBody() : void
 			{
-				facade.sendNotification( ApplicationFacade.CREATE_BODY );
-				facade.sendNotification( ApplicationFacade.MODULE_SELECTED);
+				facade.sendNotification( Notifications.CREATE_BODY );
+				facade.sendNotification( Notifications.MODULE_SELECTED);
 			}
 			
 			override public function deSelect():void
 			{
-				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
+				facade.sendNotification(Notifications.MODULE_DESELECTED);
 			}
 
 			override public function initializeSettings() : void
