updater message box
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7933 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/style.css
@@ -4,12 +4,13 @@ Please remember to add the following effects to the main application.
 	<mx:Move duration="100" id="DockerMove"/>
 	<mx:Fade duration="100" id="DockerFade"/>
 */
-
+/*
 @font-face
 {
 	src        : url("assets/fonts/arial.ttf");
 	fontFamily : Arial;
 }
+*/
 
 global
 {
