--- a/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
@@ -4,13 +4,13 @@ Please remember to add the following effects to the main application.
 	<mx:Move duration="100" id="DockerMove"/>
 	<mx:Fade duration="100" id="DockerFade"/>
 */
-
+/*
 @font-face
 {
 	src        : url("assets/fonts/arial.ttf");
 	fontFamily : Arial;
 }
-
+*/
 global
 {
 	/*backgroundAlpha: 1.0; /* this runs the opacity of nearly every square piece of the components */
