git-svn-id: http://svn.vdombox.ru/flextools/trunk@7941 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
@@ -26,9 +26,16 @@
 				applicationList.scroller.setStyle( "horizontalScrollPolicy", "off" );
 				
 				applicationList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
+				
+				addEventListener( MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
 
 			}
 
+			private function mouseWheelHandler( event : MouseEvent ) : void
+			{
+				event.delta = event.delta > 0 ? 1 : -1;
+			}
+			
 			private function getLocalesWord( word : String ) : String
 			{
 				return resourceManager.getString( 'Core_General', word );
