--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
@@ -111,17 +111,14 @@
 			<s:RichText height="100%" 
 						text="{VersionUtils.getApplicationVersion()}" color="#CBCBCB"
 						fontSize="10"/>
+			
+			<s:RichText id="titleText" 
+					 	height="100%" color="#FFFFFF" fontSize="10"/>
 		</s:HGroup>
 				
 	</s:Group>
 	
-	<s:Label id="titleText" 
-			 height="100%" minWidth="10" width="100%" 
-			 color="#6b6b6b" fontSize="10" fontWeight="bold"
-			 fontFamily="Tahoma"
-			 paddingTop="11" paddingLeft="20"
-			 textAlign="left"
-			 maxDisplayedLines="1" visible="false"/>
+	
 			   
 	
 	<s:HGroup right="16" top="12" height="100%" minWidth="40" minHeight="20" gap="10">
