files migration: bug fix
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7950 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -168,7 +168,7 @@
 			if ( File.applicationDirectory.resolvePath( 'style/builder.swf' ).exists )
 				StyleManager.loadStyleDeclarations( "style/builder.swf" );
 		}
-
+		
 		private function init() : void
 		{
 			MenuGeneral.menu = flexNativeMenu;
@@ -182,8 +182,6 @@
 			var langFolder : File;
 			var fileStream : FileStream;
 
-			trace ("BuilderContextManager.builderInstance: " + BuilderContextManager.instance);
-			trace ("BuilderContextManager.builderInstance: " + BuilderContextManager.instance);
 			for each ( langFile in [BuilderContextManager.instance.dataStorage, BuilderContextManager.instance.settingStorage] )
 			{
 				if ( !langFile.exists )
@@ -1217,6 +1215,7 @@
 		
 		protected function creationCompleteHandler(event:FlexEvent):void
 		{
+			trace ("111");
 			addEventListener("closeWithoutSave", closeWithoutSaveHandler);
 
 			checkUpdate();
