--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ToolBoxPanel.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ToolBoxPanel.mxml
@@ -4,7 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx" 
 		 xmlns:components="net.vdombox.ide.modules.dataBase.view.components.*" 
 		 xmlns:toolBoxComponents="net.vdombox.ide.modules.dataBase.view.components.toolBoxComponents.*"
-		 creationComplete="group1_creationCompleteHandler(event)">
+		 creationComplete="group1_creationCompleteHandler(event)" xmlns:components1="net.vdombox.ide.common.view.components.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
@@ -69,38 +69,33 @@
 		<s:State name="QuerySimpleBuildBox" />
 	</s:states>
 	
-	<s:VGroup width="100%" height="100%">
-		
-		<s:Label color="#FF0000" text="Не забудь нажать прежде commit"/>
-		
-		<s:HGroup width="100%" height="100%">
+	<s:Rect width="100%" height="100%">
+		<s:fill>
+			<s:SolidColor color="#B8D9F7"/>
+		</s:fill>
+	</s:Rect>
+	
+	<components1:VDOMScroller width="100%" maxHeight="200">
+		<s:VGroup width="100%" height="100%">
 			
-			<s:Group width="100%" height="100%">
-				
-				<toolBoxComponents:SearchBox target="{dataTable}" height="22" includeIn="SearchBox"/>
-				
-				<toolBoxComponents:SortQueryBox id="sortQueryBox" dataProvider="{dataTable}" includeIn="SortQueryBox"/>
-				
-				<toolBoxComponents:QuerySimpleBuildBox id="querySimpleBuilderBox" dataProvider="{dataTable}" includeIn="QuerySimpleBuildBox"/>
-				
-			</s:Group>
+			<s:Label color="#FF0000" text="Не забудь нажать прежде commit" includeIn="QuerySimpleBuildBox, SortQueryBox"/>
 			
-			<s:VGroup height="100%">
+			<s:HGroup width="100%" height="100%">
 				
-				<s:Button id="searchBox" label="Search" click="{ currentState = 'SearchBox' }"/>
+				<s:Group width="100%" height="100%">
+					
+					<toolBoxComponents:SearchBox target="{dataTable}" height="22" includeIn="SearchBox"/>
+					
+					<toolBoxComponents:SortQueryBox id="sortQueryBox" dataProvider="{dataTable}" includeIn="SortQueryBox"/>
+					
+					<toolBoxComponents:QuerySimpleBuildBox id="querySimpleBuilderBox" dataProvider="{dataTable}" includeIn="QuerySimpleBuildBox"/>
+					
+				</s:Group>
 				
-				<s:Button id="sort" label="Sort"  click="{ currentState = 'SortQueryBox' }"/>
-				
-				<s:Button id="querySimple" label="Query Simple"  click="{ currentState = 'QuerySimpleBuildBox' }"/>
-				
-			</s:VGroup>
+			</s:HGroup>
 			
-		</s:HGroup>
+		</s:VGroup>
 		
-	</s:VGroup>
-	
-	
-	
-	
-	
+	</components1:VDOMScroller>
+
 </s:Group>
