--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/QuerySimpleBuildBox.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/QuerySimpleBuildBox.mxml
@@ -4,7 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="net.vdombox.ide.common.view.components.*" 
 		 xmlns:ItemRenderers="net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.*"
-		 creationComplete="group1_creationCompleteHandler(event)">
+		 creationComplete="group1_creationCompleteHandler(event)" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
@@ -36,18 +36,24 @@
 			
 			protected function group1_creationCompleteHandler(event:FlexEvent):void
 			{
-				addEventListener( ToolBoxPanelEvent.ADD_QUERY_SIMPLE, addQuerySimple, true, 0 , true );
 				addEventListener( ToolBoxPanelEvent.REMOVE_QUERY_SIMPLE, removeQuerySimple, true, 0 , true );
+				addEventListener( ToolBoxPanelEvent.UP_QUERY_SIMPLE, upQuerySimple, true, 0 , true );
+				addEventListener( ToolBoxPanelEvent.DOWN_QUERY_SIMPLE, downQuerySimple, true, 0 , true );
 			}
 			
-			private function addQuerySimple( event : ToolBoxPanelEvent ) : void
+			private function addQuerySimple( event : MouseEvent ) : void
 			{
 				var querySimpleBuildBoxItemRenderer : QuerySimpleBuildBoxItemRenderer = new QuerySimpleBuildBoxItemRenderer();
 				querySimpleBuildBoxItemRenderer.dataProvider = columns;
 				
-				var positionItemRenderer : int = dataGroup.getElementIndex( event.target as QuerySimpleBuildBoxItemRenderer ) + 1;
+				dataGroup.addElement( querySimpleBuildBoxItemRenderer);
 				
-				dataGroup.addElementAt( querySimpleBuildBoxItemRenderer, positionItemRenderer );
+				for( var i : int = 0; i < dataGroup.numElements; i++ )
+				{
+					( dataGroup.getElementAt(0) as QuerySimpleBuildBoxItemRenderer ).removeDisplay = true;
+				}
+				
+				setUpAndDownVisible();
 			}
 			
 			private function removeQuerySimple( event : ToolBoxPanelEvent ) : void
@@ -58,6 +64,35 @@
 				var positionItemRenderer : int = dataGroup.getElementIndex( event.target as QuerySimpleBuildBoxItemRenderer );
 				
 				dataGroup.removeElementAt( positionItemRenderer );
+				
+				if ( dataGroup.numElements == 1 )
+				{
+					( dataGroup.getElementAt(0) as QuerySimpleBuildBoxItemRenderer ).removeDisplay = false;
+				}
+				
+				setUpAndDownVisible();
+			}
+			
+			private function upQuerySimple( event : ToolBoxPanelEvent ) : void
+			{
+				var positionItemRenderer : int = dataGroup.getElementIndex( event.target as QuerySimpleBuildBoxItemRenderer );
+				
+				var querySimpleBuildBoxItemRenderer : QuerySimpleBuildBoxItemRenderer = dataGroup.removeElementAt( positionItemRenderer ) as QuerySimpleBuildBoxItemRenderer;
+				
+				dataGroup.addElementAt( querySimpleBuildBoxItemRenderer, positionItemRenderer - 1 );
+				
+				setUpAndDownVisible();
+			}
+			
+			private function downQuerySimple( event : ToolBoxPanelEvent ) : void
+			{
+				var positionItemRenderer : int = dataGroup.getElementIndex( event.target as QuerySimpleBuildBoxItemRenderer );
+				
+				var querySimpleBuildBoxItemRenderer : QuerySimpleBuildBoxItemRenderer = dataGroup.removeElementAt( positionItemRenderer ) as QuerySimpleBuildBoxItemRenderer;
+				
+				dataGroup.addElementAt( querySimpleBuildBoxItemRenderer, positionItemRenderer + 1 );
+				
+				setUpAndDownVisible();
 			}
 			
 			protected function apply_clickHandler(event:MouseEvent):void
@@ -66,7 +101,7 @@
 				
 				var querySimpleBuildBoxItemRenderer : QuerySimpleBuildBoxItemRenderer;
 				
-				for ( var i : int = 0; i < dataGroup.numElements - 1; i++ )
+				for ( var i : int = 0; i < dataGroup.numElements; i++ )
 				{
 					querySimpleBuildBoxItemRenderer = dataGroup.getElementAt( i ) as QuerySimpleBuildBoxItemRenderer;
 					
@@ -84,21 +119,61 @@
 				dispatchEvent( new ToolBoxPanelEvent( ToolBoxPanelEvent.SEND_QUERY_SIMPLE_CLICK ) );
 			}
 			
+			private function setUpAndDownVisible() : void
+			{
+				var querySimpleBuildBoxItemRenderer : QuerySimpleBuildBoxItemRenderer;
+				
+				if ( dataGroup.numElements == 1 )
+				{
+					querySimpleBuildBoxItemRenderer = dataGroup.getElementAt( 0 ) as QuerySimpleBuildBoxItemRenderer;
+					querySimpleBuildBoxItemRenderer.upDisplay = false;
+					querySimpleBuildBoxItemRenderer.downDisplay = false;
+					querySimpleBuildBoxItemRenderer.betweenDisplay = false;
+					return;
+				}
+				
+				for ( var i : int = 1; i < dataGroup.numElements - 1; i++ )
+				{
+					querySimpleBuildBoxItemRenderer = dataGroup.getElementAt( i ) as QuerySimpleBuildBoxItemRenderer;
+					querySimpleBuildBoxItemRenderer.upDisplay = true;
+					querySimpleBuildBoxItemRenderer.downDisplay = true;
+					querySimpleBuildBoxItemRenderer.betweenDisplay = true;
+				}
+				
+				querySimpleBuildBoxItemRenderer = dataGroup.getElementAt( 0 ) as QuerySimpleBuildBoxItemRenderer;
+				querySimpleBuildBoxItemRenderer.upDisplay = false;
+				querySimpleBuildBoxItemRenderer.downDisplay = true;
+				querySimpleBuildBoxItemRenderer.betweenDisplay = false;
+				
+				querySimpleBuildBoxItemRenderer = dataGroup.getElementAt( dataGroup.numElements - 1 ) as QuerySimpleBuildBoxItemRenderer;
+				querySimpleBuildBoxItemRenderer.upDisplay = true;
+				querySimpleBuildBoxItemRenderer.downDisplay = false;
+				querySimpleBuildBoxItemRenderer.betweenDisplay = true;
+			}
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
-	<components:VDOMScroller id="scroller" width="100%" height="100%">
+	<s:VGroup  width="100%" gap="5">
+	
+		<components:VDOMScroller id="scroller" width="100%" maxHeight="150">
 		
-		<s:VGroup id="dataGroup" width="100%" gap="0">
-			
-			<ItemRenderers:QuerySimpleBuildBoxItemRenderer dataProvider="{columns}" removeDisplay="false" />
-			
+			<s:VGroup id="dataGroup" width="100%" gap="0">
+				
+				<ItemRenderers:QuerySimpleBuildBoxItemRenderer dataProvider="{columns}" removeDisplay="false" upDisplay="false" downDisplay="false" />
+				
+			</s:VGroup>
+		
+		</components:VDOMScroller>
+		
+		<s:HGroup width="100%" verticalAlign="middle">
 			<s:Button id="apply" label="Apply" click="apply_clickHandler(event)"/>
 			
-		</s:VGroup>
-		
-	</components:VDOMScroller>
+			<button:WorkAreaButton id="addNew" width="20" icon="@Embed('assets/Add.png')"
+								   click="addQuerySimple(event)"/>
+		</s:HGroup>
+	</s:VGroup>
 </s:Group>
