1) dialog -> checkbox 2) dialog -> browseFile - NOT SUPPORTED
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7958 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
@@ -61,6 +61,31 @@ global
 	focusAlpha : 0;
 }
 
+.questionAnswerCheckBoxStyle
+{
+	fontFamily	: Arial;
+	fontSize	: 13;
+	
+	fillGradientColors: #fcfcfc, #c8c8c8;
+	fillAlpha:  1;
+	
+	icon : ClassReference(null);
+	skin : ClassReference("net.vdombox.powerpack.lib.player.customize.skins.CheckBoxSkin");
+	
+	borderGradientColors: #808080, #6e6e6e;
+	borderThickness: 2.5;
+	borderStyle : none;
+	
+	color: #ffffff;
+	disabledColor:  #ffffff;
+	textRollOverColor: #ffffff;
+	textSelectedColor: #ffffff;
+	
+	paddingLeft : 24;
+	iconRadius : 10;
+	
+	focusAlpha : 0;
+}
 
 .builderWindowStyle
 {
