--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -146,19 +146,17 @@
 			<!--<components1:WorkAreaButton id="newBase" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_base' ) }" height="20" click="newBase_clickHandler(event)" includeIn="baseVisual"/>-->
 			
 			<s:HGroup includeIn="tableEditor" height="100%" verticalAlign="middle">
-				<s:Label text="{ resourceManager.getString( 'DataBase_General', 'data_table_editor_pages' ) }" />
-				<mx:HBox id="pagesArea" width="100%" height="20" verticalAlign="middle" horizontalGap="0"
-						 disabledOverlayAlpha="0.1" />
 				<s:Label text="{ resourceManager.getString( 'DataBase_General', 'data_table_editor_records' ) }" fontSize="9" />
 				<s:TextInput id="amount" borderColor="#999999" fontWeight="bold" height="20" fontSize="9" width="45" />
-				<button:WorkAreaButton height="20" label="{ resourceManager.getString( 'DataBase_General', 'data_table_editor_apply' ) }" click="button1_clickHandler(event)"/>
+				<button:WorkAreaButton height="20" label="{ resourceManager.getString( 'DataBase_General', 'data_table_editor_apply' ) }" 
+									   icon="@Embed('assets/commit.png')" click="button1_clickHandler(event)"/>
 				
 			</s:HGroup>
 		</s:HGroup>
 		
 		<s:Group width="100%" height="100%">
 			
-			<components:DataTableEditor  id="dataEditor" width="100%" height="100%" objectVO="{_objectVO as ObjectVO}" visible="false" visible.tableEditor="true" pagesArea="{pagesArea}"/>
+			<components:DataTableEditor  id="dataEditor" width="100%" height="100%" objectVO="{_objectVO as ObjectVO}" visible="false" visible.tableEditor="true"/>
 			
 			<components:DataTableStructure id="DataStructure" width="100%" height="100%" objectVO="{_objectVO as ObjectVO}" visible="false" visible.tableStructure="true"/>
 			
