git-svn-id: http://svn.vdombox.ru/flextools/trunk@7962 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/QuerySimpleBuildBox.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/toolBoxComponents/QuerySimpleBuildBox.mxml
@@ -157,7 +157,7 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
-	<s:VGroup  width="100%" gap="5">
+	<s:VGroup  width="100%" gap="5" paddingLeft="10">
 	
 		<components:VDOMScroller id="scroller" width="100%" maxHeight="150">
 		
