--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -8,10 +8,13 @@
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			import mx.collections.ArrayList;
+			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.model._vo.LibraryVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.components.button.AlertButton;
+			import net.vdombox.ide.common.view.components.windows.Alert;
 			import net.vdombox.ide.modules.scripts.events.LibrariesPanelEvent;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
 			
@@ -29,11 +32,6 @@
 			{
 				librariesList.selectedItem = value;
 				librariesList.validateNow();
-
-				if ( librariesList.selectedIndex == -1 )
-					deleteButton.enabled = false;
-				else
-					deleteButton.enabled = true;
 			}
 
 			public function set libraries( value : Array ) : void
@@ -88,8 +86,8 @@
 						isSelectedItemChanged = false;
 				}
 				
-				if( isSelectedItemChanged )
-					dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.SELECTED_LIBRARY_CHANGED ) )					
+				/*if( isSelectedItemChanged )
+					dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.SELECTED_LIBRARY_CHANGED ) )			*/		
 			}
 
 			protected function librariesList_changeHandler( event : ListItemRendererEvent ) : void
@@ -99,21 +97,25 @@
 
 			protected function librariesList_creationCompleteHandler( event : FlexEvent ) : void
 			{
-				BindingUtils.bindSetter( indexChanged, librariesList, "selectedIndex", true );
-				librariesList.addEventListener( ListItemRendererEvent.DOUBLE_CLICK,librariesList_changeHandler, true, 0, true );
+				librariesList.addEventListener( ListItemRendererEvent.ITEM_CHENGED,librariesList_changeHandler, true, 0, true );
+				librariesList.addEventListener( KeyboardEvent.KEY_DOWN, itemrenderer1_keyDownHandler, false, 0, true );
 			}
-
-			private function indexChanged( value : int ) : void
+			
+			private function itemrenderer1_keyDownHandler(event:KeyboardEvent):void
 			{
-				if ( value == -1 && deleteButton.enabled )
-					deleteButton.enabled = false;
-				else if ( !deleteButton.enabled && value != -1 )
-					deleteButton.enabled = true;
+				if ( event.keyCode == Keyboard.DELETE )
+					Alert.Show( "You are wont to delete?", AlertButton.OK_No, this.parentApplication, removeactionRequest );
+			}
+			
+			private function removeactionRequest( event : CloseEvent ) : void 
+			{
+				if ( event.detail == Alert.YES )
+					dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.DELETE_LIBRARY ) );
 			}
 			
 			protected function panel1_removeHandler(event:FlexEvent):void
 			{
-				librariesList.removeEventListener( ListItemRendererEvent.DOUBLE_CLICK,librariesList_changeHandler, true );
+				librariesList.removeEventListener( ListItemRendererEvent.ITEM_CHENGED,librariesList_changeHandler, true );
 			}
 			
 		]]>
@@ -124,6 +126,9 @@
 			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
+	
+	<mx:Image id="createLibrary" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="-23" 
+			  smoothBitmapContent="true" click="dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.CREATE_LIBRARY ) )"/>
 
 	<s:List id="librariesList"
 			dataProvider="{ _libraries }" height="100%" labelField="name" width="100%"
@@ -131,16 +136,4 @@
 			contentBackgroundAlpha="0" borderVisible="false"
 			creationComplete="librariesList_creationCompleteHandler(event)"
 			doubleClickEnabled="true"/>
-
-	<s:controlBarContent>
-
-		<mx:Spacer width="100%"/>
-
-		<s:Button label="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_add' ) }"
-				  click="dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.CREATE_LIBRARY ) )"/>
-
-		<s:Button id="deleteButton"
-				  enabled="false" label="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_delete' ) }"
-				  click="dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.DELETE_LIBRARY ) )"/>
-	</s:controlBarContent>
 </s:Panel>
