git-svn-id: http://svn.vdombox.ru/flextools/trunk@7964 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -30,11 +30,11 @@
 		</s:fill>
 	</s:Rect>
 
-	<components:ScriptEditor id="scriptEditor"
-							 height="100%" width="100%"/>
-	
-<!--	<components:WorkArea id="workArea"
+	<!--	<components:ScriptEditor id="scriptEditor"
 							 height="100%" width="100%"/>-->
+	
+	<components:WorkArea id="workArea"
+							 height="100%" width="100%"/>
 	
 	<s:Rect width="8" height="100%">
 		<s:fill>
