--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -7,7 +7,9 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
-			import mx.collections.ArrayList;
+			import mx.collections.ArrayCollection;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			
@@ -21,7 +23,7 @@
 			import spark.events.IndexChangeEvent;
 
 			[Bindable]
-			private var _libraries : ArrayList;
+			private var _libraries : ArrayCollection;
 
 			public function get selectedLibrary() : LibraryVO
 			{
@@ -68,7 +70,11 @@
 						isSelectedItemChanged = false;
 					}
 
-					_libraries = new ArrayList( value );
+					_libraries = new ArrayCollection( value );
+					
+					_libraries.sort = new Sort();
+					_libraries.sort.fields = [ new SortField( "name" ) ];
+					_libraries.refresh();
 
 					if ( newSelectedIndex != -1 )
 						librariesList.validateNow();
