--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -7,7 +7,10 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
+			import mx.collections.ArrayCollection;
 			import mx.collections.ArrayList;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			
@@ -21,7 +24,7 @@
 			import spark.events.IndexChangeEvent;
 
 			[Bindable]
-			private var _scripts : ArrayList;
+			private var _scripts : ArrayCollection;
 
 			public function get selectedScript() : ServerActionVO
 			{
@@ -74,7 +77,11 @@
 						isSelectedItemChanged = false;
 					}
 					
-					_scripts = new ArrayList( value );
+					_scripts = new ArrayCollection( value );
+					
+					_scripts.sort = new Sort();
+					_scripts.sort.fields = [ new SortField( "name" ) ];
+					_scripts.refresh();
 					
 					if( newSelectedIndex != -1 )
 						actionList.validateNow();
