--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
@@ -5,7 +5,9 @@
 		 creationComplete="panel1_creationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
-			import mx.collections.ArrayList;
+			import mx.collections.ArrayCollection;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.interfaces.IVDOMObjectVO;
@@ -15,7 +17,7 @@
 			import net.vdombox.ide.modules.scripts.events.TabsPanelEvent;
 			
 			[Bindable]
-			private var _tabs : ArrayList;
+			private var _tabs : ArrayCollection;
 			
 			private function findServerAction( action : ServerActionVO ) : ServerActionVO
 			{
@@ -47,7 +49,7 @@
 			public function addAction( action : Object ) : void
 			{
 				if ( !_tabs )
-					_tabs = new ArrayList();
+					_tabs = new ArrayCollection();
 				
 				var tabsItem : Object;
 				
@@ -66,18 +68,33 @@
 				
 				
 				_tabs.addItem( action );
-				tabs.selectedIndex = tabs.dataProvider.length - 1;
+				
+				_tabs.sort = new Sort();
+				_tabs.sort.fields = [ new SortField( "name" ), new SortField( "containerName" ) ];
+				_tabs.refresh();
+				
+				tabs.selectedItem = action;
 				tabs_changeHandler();
 			}
 			
 			protected function panel1_creationCompleteHandler(event:FlexEvent):void
 			{
 				tabs.addEventListener( ListItemRendererEvent.ITEM_CHENGED,tabs_changeHandler, true, 0, true );
+				tabs.addEventListener( ListItemRendererEvent.DELETE_PRESS,tabs_deleteHandler, true, 0, true );
 			}
 			
 			private function tabs_changeHandler( event : ListItemRendererEvent = null ) : void
 			{
 				dispatchEvent( new TabsPanelEvent( TabsPanelEvent.SELECTED_TAB_CHANGED ) );
+			}
+			
+			private function tabs_deleteHandler( event : ListItemRendererEvent = null ) : void
+			{
+				var actionVO : Object =(event.target as TabsPanelItemRenderer).data;
+				
+				_tabs.removeItemAt(  _tabs.getItemIndex( actionVO ) );
+				
+				dispatchEvent( new TabsPanelEvent( TabsPanelEvent.TAB_DELETE, actionVO ) );
 			}
 			
 		]]>
