git-svn-id: http://svn.vdombox.ru/flextools/trunk@7965 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -349,7 +349,7 @@
 		</s:fill>
 	</s:Rect>
 	
-	<mx:Image source="{VDOMImage.Plus}" width="20" height="20" top="-25" right="10"
+	<mx:Image source="{VDOMImage.Plus}" width="20" height="20" top="-23" right="10" smoothBitmapContent="true"
 			  click="image1_clickHandler(event)"/>
 	
 	<mx:Tree id="objectsTree" borderVisible="false" maxHorizontalScrollPosition="140" horizontalScrollPolicy="auto"
