--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx">
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
+		 creationComplete="panel1_creationCompleteHandler(event)">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
@@ -38,8 +40,12 @@
 			
 			protected function changeHandler(event:ListEvent):void
 			{
-				// TODO Auto-generated method stub
 				dispatchEvent( new GlobalScriptsPanelEvent ( GlobalScriptsPanelEvent.SCRIPTS_CHANGE ) );
+			}
+			
+			protected function panel1_creationCompleteHandler(event:FlexEvent):void
+			{
+				titleDisplay.left = 25;
 			}
 			
 		]]>
@@ -49,6 +55,9 @@
 			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
+	
+	<mx:Image id="icon" source="@Embed('assets/GlobalScript_white.png')" height="16" width="16" left="10" top="-23" 
+			  smoothBitmapContent="true"/>
 	
 	<mx:Tree id="globalTree"
 			dataProvider="{ _actions }" 
