--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -2,6 +2,7 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 creationComplete="panel1_creationCompleteHandler(event)"
 		 remove="panel1_removeHandler(event)">
 
 	<fx:Script>
@@ -124,6 +125,11 @@
 				librariesList.removeEventListener( ListItemRendererEvent.ITEM_CHENGED,librariesList_changeHandler, true );
 			}
 			
+			protected function panel1_creationCompleteHandler(event:FlexEvent):void
+			{
+				titleDisplay.left = 25;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -132,6 +138,9 @@
 			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
+	
+	<mx:Image id="icon" source="@Embed('assets/Libraries_white.png')" height="16" width="16" left="10" top="-23" 
+			  smoothBitmapContent="true"/>
 	
 	<mx:Image id="createLibrary" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="-23" 
 			  smoothBitmapContent="true" click="dispatchEvent( new LibrariesPanelEvent( LibrariesPanelEvent.CREATE_LIBRARY ) )"/>
