--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -115,6 +115,8 @@
 			{
 				actionList.addEventListener( ListItemRendererEvent.ITEM_CHENGED, actionList_changeHandler, true, 0, true );
 				actionList.addEventListener( KeyboardEvent.KEY_DOWN, itemrenderer1_keyDownHandler, false, 0, true );
+				
+				titleDisplay.left = 25;
 			}
 			
 			private function itemrenderer1_keyDownHandler(event:KeyboardEvent):void
@@ -137,6 +139,9 @@
 			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
+	
+	<mx:Image id="icon" source="@Embed('assets/ServerScripts_white.png')" height="16" width="16" left="10" top="-23" 
+			  smoothBitmapContent="true"/>
 	
 	<mx:Image id="createServerAction" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="-23" 
 			  smoothBitmapContent="true" click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.CREATE_ACTION ) )"/>
