--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
@@ -11,6 +11,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.interfaces.IVDOMObjectVO;
+			import net.vdombox.ide.common.model._vo.ObjectVO;
+			import net.vdombox.ide.common.model._vo.PageVO;
 			import net.vdombox.ide.common.model._vo.ServerActionVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
@@ -75,6 +77,26 @@
 				
 				tabs.selectedItem = action;
 				tabs_changeHandler();
+			}
+			
+			public function deleteActionByObjectVO( objectVO : IVDOMObjectVO ) : void
+			{
+				/*if ( objectVO is ObjectVO )
+				{
+					for each ( var action : Object in _tabs )
+					{
+						if ( action is ServerActionVO && action.containerVO.id == objectVO.id )
+							_tabs.removeItemAt(  _tabs.getItemIndex( action ) );
+					}
+				}
+				else if ( objectVO is PageVO )
+				{
+					for each ( var action : Object in _tabs )
+					{
+						if ( action is ServerActionVO && action.containerVO.id == objectVO.id )
+							_tabs.removeItemAt(  _tabs.getItemIndex( action ) );
+					}
+				}*/
 			}
 			
 			protected function panel1_creationCompleteHandler(event:FlexEvent):void
