--- a/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
+++ b/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" minWidth="955" minHeight="600" 
-				creationComplete="application1_creationCompleteHandler(event)" xmlns:powerpack="net.vdombox.powerpack.*"  >
-	<mx:Style source="assets/style/style.css"/>
+				creationComplete="application1_creationCompleteHandler(event)" xmlns:powerpack="net.vdombox.powerpack.*" xmlns:player="net.vdombox.powerpack.lib.player.*"  >
+	
 	<mx:Script>
 		<![CDATA[
-		import mx.events.FlexEvent;
+			import mx.controls.Alert;
+			import mx.events.FlexEvent;
 
-		private static var POST_ADDRESS:String = "template.xml";
+//		private static var POST_ADDRESS:String = "template.xml";
+			private static var POST_ADDRESS:String = "http://192.168.0.201/API.vdom?id=14";
+//			d:\FlexProjects\PowerPack\WebInstaller\src\template.xml 
 
 		protected function application1_creationCompleteHandler( event:FlexEvent ):void
 		{
-			var loader:URLLoader;
-			loader = new URLLoader ();
-			var request:URLRequest = new URLRequest ( POST_ADDRESS );
+			var url : String = Application.application.parameters.url;
+			var loader:URLLoader = new URLLoader ();
+			if ( !url )
+				url = POST_ADDRESS;
+			
+//			Alert.show(url);
+			var request:URLRequest = new URLRequest ( url );
 
 			// pass the post data
 			request.method = URLRequestMethod.POST;
 
-			var variables:URLVariables = new URLVariables ();
-			variables.type = "getXML";
+		 	var variables:URLVariables = new URLVariables ();
+			variables["type"] = "dfgf";
 			request.data = variables;
-
+ 
 			// Add Handlers
 			loader.addEventListener ( Event.COMPLETE, on_complete );
 			loader.load ( request );
-
+			
+//			var p1 : String = Application.application.parameters.param1;
+			
 		}
 
 		private function on_complete( evt:Event ):void
 		{
 			// do your stuff here
 //				trace (evt.target.data);
+//			Alert.show(evt.target.data );
 			player.dataProvider = new XML ( evt.target.data );
+
+
 		}
 		]]>
 	</mx:Script>
-	<powerpack:Player id="player"/>
+	<player:Player id="player"/>
+	
+	
 	
 </mx:Application>
