--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -11,7 +11,7 @@
 		xmlns:control="net.vdombox.powerpack.lib.player.control.*"
 
 		styleName="installerWindowStyle">
-
+	<!--mx:Style source="assets/style/style.css"/-->
 	
 	<mx:Metadata>
 		[Event(name="close", type="flash.events.Event")]
